--- a/templates/mavsdk_server/request.j2
+++ b/templates/mavsdk_server/request.j2
@@ -39,9 +39,8 @@ grpc::Status {{ name.upper_camel_case }}(
             {% endif %}
         }
         {% else %}
-        response->set_{% if return_type.is_primitive %}{{ return_name.lower_snake_case }}(result{% if has_result %}.second{% endif %}{% else %}allocated_{{ return_name.lower_snake_case }}(translateToRpc{{ return_type.inner_name }}(result{% if has_result %}.second{% endif %}).release(){% endif %});
-        {% endif %}
-    }
+        response->set_{% if return_type.is_primitive %}{{ return_name.lower_snake_case }}(result{% if has_result %}.second{% endif %}{% elif return_type.is_enum %}{{ return_name.lower_snake_case }}(translateToRpc{{ return_type.inner_name }}(result{% if has_result %}.second{% endif %}){% else %}allocated_{{ return_name.lower_snake_case }}(translateToRpc{{ return_type.inner_name }}(result{% if has_result %}.second{% endif %} ).release(){% endif %});
+        {% endif %} }
 
 
     return grpc::Status::OK;
